[tool.poetry]
name = "hnscraper"
version = "0.1.0"
description = "Hackernews Scraper"
license = "MIT"
authors = ["Pushp Vashisht <pushptyagi1@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pushp1997/Hackernews-Scraping/"

[tool.poetry.dependencies]
python = ">=3.7, <4"
requests = "^2.28.0"
BeautifulSoup4 = "^4.11.1"
pymongo = "^4.1.1"
jupyterlab = "^3.4.3"
notebook = "^6.4.12"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8==3.9.2
tox==3.24.3
pytest==6.2.5
pytest-cov==2.12.1
mypy===0.910
pytest = "^3.4"
black = "^22.3.0"
