[tool.poetry]
name = "hnscraper"
version = "0.1.0"
description = "Hackernews Scraper"
license = "MIT"
authors = ["Pushp Vashisht <pushptyagi1@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pushp1997/Hackernews-Scraping/"

[tool.poetry.dependencies]
python = ">=3.7, <4"
requests = "^2.28.0"
BeautifulSoup4 = "^4.11.1"
pymongo = "^4.1.1"
jupyterlab = "^3.4.3"
notebook = "^6.4.12"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
tox = "^3.24.3"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
mypy = "^0.910"
black = "^22.3.0"
types-requests = "^2.27.30"

[tool.poetry.scripts]
hnscraper = "hnscraper.main:main"

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=hnscraper"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "hnscraper"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true