[metadata]
name = HackerNews Scraper
description = Scrapes hacker news for given no of pages
author = Pushp Vashisht
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    hnscraper
install_requires =
    requests
    BeautifulSoup4
    pymongo
    jupyterlab
    notebook
    pathlib
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hnscraper = py.typed

[flake8]
max-line-length = 160
ignore=["E203"]